--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@reduxjs/toolkit": "^1.5.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -16,9 +17,12 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.1",
     "react-rating-stars-component": "^2.2.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "react-star-ratings": "^2.3.0"
+    "react-slideshow-image": "^3.4.3",
+    "react-star-ratings": "^2.3.0",
+    "semantic-ui-react": "^2.0.3"
   },
   "scripts": {
     "predeploy": "npm run build",
