--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "3.4.1",
     "react-slideshow-image": "^3.4.3",
     "react-star-ratings": "^2.3.0",
-    "semantic-ui-react": "^2.0.3"
+    "semantic-ui-react": "^2.0.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "predeploy": "npm run build",
